MOSIP-35118 -  fix logo visibility issue on pre-registration login page (#199)

--- a/pre-registration-ui/src/app/auth/login/login.component.css
+++ b/pre-registration-ui/src/app/auth/login/login.component.css
@@ -6,6 +6,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: transparent !important;
 }
 
 .spacing {
@@ -26,9 +27,8 @@
 }
 
 .form_wrapper {
-  margin: 4% 0%;
+  margin: 4% 0;
   line-height: 2rem;
-  height: 64vh;
 }
 
 .form_fields_padding {
@@ -41,7 +41,7 @@
   font-size: 1.5rem;
   text-align: center;
   font-weight: 600;
-  
+
 }
 
 .subHeading {
